[project]
    dependencies    = [
    "bash-kernel>=0.10.0",
    "ipykernel>=6.29.5",
    "ipython>=9.3.0",
    "ipywidgets>=8.1.7",
    "spectrumx>=0.1.10",
]
    description     = "SDS example"
    name            = "data-system"
    readme          = "README.md"
    requires-python = ">=3.13"
    version         = "0.1.0"
